--- a/.github/workflows/sca-analysis.yml
+++ b/.github/workflows/sca-analysis.yml
@@ -50,4 +50,4 @@ jobs:
         run: 7z e pipeline-scan-LATEST.zip -aoa
 
       - name: Run Pipeline Scanner
-        run: java -jar pipeline-scan.jar --veracode_api_id "${{secrets.VERACODE_API_ID}}" --veracode_api_key "${{secrets.VERACODE_API_VALUE}}" --file "target/verademo.war" --fail_on_severity="Very High, High"
+        run: java -jar pipeline-scan.jar --veracode_api_id "${{secrets.VERACODE_API_ID}}" --veracode_api_key "${{secrets.VERACODE_API_VALUE}}" --file "target/verademo.war" --fail_on_severity="Very High, High" --verbose true
