Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -28,5 +28,5 @@ steps:
     veracodeAppProfile: 'Verademo Azure'
     version: 'AzureScan$(build.buildNumber)'
     filepath: '$(build.artifactstagingdirectory)'
-    sandboxName: 'Azure-Pre-Merge'
+    sandboxName: 'Azure-Test'
     maximumWaitTime: '360'
