--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,6 +23,17 @@ steps:
 
 - task: Veracode@3
   inputs:
+    ConnectionDetailsSelection: 'Credentials'
+    apiId: 'bd240a7cad76b5e79cfe951a95e273e6'
+    apiKey: 'a5ed2096373fdcd7417efd1d934bfd237147c61ac77896124a8337d73255a06b2e97d4e72d20ecb8b3cfc2f82bb58a3f69186e4cce8cf6f2524d3e2dd894fef6'
+    veracodeAppProfile: 'Verademo Azure'
+    version: '$(build.buildNumber)'
+    filepath: '$(build.artifactstagingdirectory)'
+    sandboxName: 'Azure-Test'
+    maximumWaitTime: '360'
+
+- task: Veracode@3
+  inputs:
     ConnectionDetailsSelection: 'Endpoint'
     AnalysisService: 'Veracode API Account'
     veracodeAppProfile: 'Verademo Azure'
