Using secret variable

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,7 +8,9 @@ trigger:
 
 pool:
   vmImage: ubuntu-latest
-
+variables:
+  - name: SRCCLR_API_TOKEN
+    value: $(SRCCLR_API_TOKEN)
 steps:
 - task: Maven@3
   inputs:
@@ -21,8 +23,8 @@ steps:
     testResultsFiles: '**/surefire-reports/TEST-*.xml'
     goals: 'package'
 
-- task: CmdLine@2
-  inputs:
+- task: CmdLine@2  
+  inputs:    
     script: |
       curl -sSL  https://download.sourceclear.com/ci.sh | SRCCLR_CI_JSON=1 sh
     filepath: '$(build.artifactstagingdirectory)'
