--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -27,8 +27,8 @@ steps:
   env:
     SRCCLR_API_TOKEN: $(SCA_TOKEN)
   inputs:
-    script: 'sca_output=$(curl -sSL  https://download.sourceclear.com/ci.sh | SRCCLR_CI_JSON=1 sh)'
+    script: 'curl -sSL  https://download.sourceclear.com/ci.sh | SRCCLR_CI_JSON=1 sh > sca_output.json'
 
 - template : CreateWorkItems.yml
   parameters:
-    json_file: $(sca_output)
+    json_file: sca_output.json
