--- a/CreateWorkItems.yml
+++ b/CreateWorkItems.yml
@@ -9,7 +9,7 @@ steps:
     envPathSeparator: '.'
     isOutput: true
     
-- ${{ each vulnerability in [json_content['jsonOutput.records.vulnerabilities']] }}:
+- ${{ each vulnerability in json_content['jsonOutput.records.vulnerabilities'] }}:
   - task: CreateWorkItem@1
   inputs:
     workItemType: 'Issue'
