--- a/CreateWorkItems.yml
+++ b/CreateWorkItems.yml
@@ -1,19 +1,26 @@
 parameters:
   json_file : ''
   
-steps:
-- task: JsonVarsV2@0
-  name: jsonOutput
-  inputs:
-    jsonFilePath: '$(json_file)'
-    envPathSeparator: '.'
-    isOutput: true
-    
-- ${{ each vulnerability in json_content['jsonOutput.records.vulnerabilities'] }}:
-  - task: CreateWorkItem@1
-  inputs:
-    workItemType: 'Issue'
-    title: 'Veracode SCA - ${{ vulnerability.title }}'
-    fieldMappings: 'Description=An issue was detected during an SCA run:\nOverview: ${{ vulnerability.overview}}\nVulnerabilityTypes: ${{vulnerability.vulnerabilityTypes}}'
-    associate: true
-    associationType: 'foundInBuild'
+stages:
+  - stage:
+    jobs:
+      - job: json_output
+        steps:
+          - task: JsonVarsV2@0
+            name: jsonOutput
+            inputs:
+              jsonFilePath: '$(System.DefaultWorkingDirectory)/test.json'
+              envPathSeparator: '.'
+              isOutput: true
+
+      - job: read_json
+        dependsOn: json_output
+        steps:
+          - ${{ each vulnerability in dependencies.json_output.outputs['jsonOutput.records.vulnerabilities'] }}:
+            - task: CreateWorkItem@1
+            inputs:
+              workItemType: 'Issue'
+              title: 'Veracode SCA - ${{ vulnerability.title }}'
+              fieldMappings: 'Description=An issue was detected during an SCA run:\nOverview: ${{ vulnerability.overview}}\nVulnerabilityTypes: ${{vulnerability.vulnerabilityTypes}}'
+              associate: true
+              associationType: 'foundInBuild'
