Calling json parsing in pipeline directly

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -37,4 +37,4 @@ steps:
     isOutput: true
 - template : CreateWorkItems.yml
   parameters:
-    vulnerabilities: $(records.vulnerabilities)
+    vulnerabilities: [$(records.vulnerabilities)]
