--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -37,4 +37,4 @@ steps:
     isOutput: true
 - template : CreateWorkItems.yml
   parameters:
-    data: ($(jq sca_output.json))
+    vulnerabilities: ($(jq '.records.vulnerabilities' sca_output.json))
