--- a/CreateWorkItems.yml
+++ b/CreateWorkItems.yml
@@ -1,8 +1,8 @@
 parameters:
-  data : ''
+  vulnerabilities : []
 
 steps:
-- ${{ each vulnerability in parameters.data.records.vulnerabilities }}:
+- ${{ each vulnerability in parameters.vulnerabilities }}:
   - task: CreateWorkItem@1
   inputs:
     workItemType: 'Issue'
