--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -37,4 +37,4 @@ steps:
     isOutput: true
 - template : CreateWorkItems.yml
   parameters:
-    vulnerabilities: ($(jq '.records.vulnerabilities' sca_output.json))
+    vulnerabilities: ($(jq '.records[0].vulnerabilities' sca_output.json))
