--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -31,5 +31,5 @@ steps:
   name: ParseSCAresults
   inputs:
     script: |
-      echo ($(jq '.records[0].vulnerabilities[]' sca_output.json))
+      echo `jq '.records[0].vulnerabilities[]' sca_output.json`
 
