--- a/CreateWorkItems.yml
+++ b/CreateWorkItems.yml
@@ -7,6 +7,6 @@ steps:
   inputs:
     workItemType: 'Issue'
     title: 'Veracode SCA - ${{ vulnerability.title }}'
-    fieldMappings: 'Description=An issue was detected during an SCA run:\nOverview: ${{ vulnerability.overview}}\nVulnerabilityTypes: ${{vulnerability.vulnerabilityTypes}}'
+    fieldMappings: '<ul><li>Description=An issue was detected during an SCA run</li><li>Overview: ${{ vulnerability.overview}}</li><li>VulnerabilityTypes: ${{vulnerability.vulnerabilityTypes}}</li></ul>'
     associate: true
     associationType: 'foundInBuild'
