Test calling without array directly

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -25,8 +25,9 @@ steps:
   env:
     SRCCLR_API_TOKEN: $(SCA_TOKEN)
   inputs:
-    script: 'curl -sSL  https://download.sourceclear.com/ci.sh | SRCCLR_CI_JSON=1 sh > sca_output.json'
+    script: |
+            
 
 - template : CreateWorkItems.yml
   parameters:
-    vulnerabilities: (`jq '.records[0].vulnerabilities' sca_output.json`)
+    sca_output: sca_output.json
