--- a/CreateWorkItems.yml
+++ b/CreateWorkItems.yml
@@ -1,8 +1,9 @@
 parameters:
-  vulnerabilities : []
+  sca_output : ''
 
 steps:
-- ${{ each vulnerability in parameters.vulnerabilities }}:
+- script: vulnerabilities=`jq '.records[0].vulnerabilities' sca_output.json`
+- ${{ each vulnerability in vulnerabilities }}:
   - task: CreateWorkItem@1
   inputs:
     workItemType: 'Issue'
