--- a/CreateWorkItems.yml
+++ b/CreateWorkItems.yml
@@ -1,9 +1,8 @@
 parameters:
-  sca_output: ''
   vulnerabilities: []
 
 steps:
-- ${{ each vulnerability in vulnerabilities }}:
+- ${{ each vulnerability in parameters.vulnerabilities }}:
   - task: CreateWorkItem@1
   inputs:
     workItemType: 'Issue'
