--- a/CreateWorkItems.yml
+++ b/CreateWorkItems.yml
@@ -1,8 +1,5 @@
-variables:
-  vulnerabilities: $[(`jq '.records[0].vulnerabilities' sca_output.json`)]
-
 steps:
-- ${{ each vulnerability in vulnerabilities }}:
+- ${{ each vulnerability in $[(`jq '.records[0].vulnerabilities' sca_output.json`)] }}:
   - task: CreateWorkItem@1
   inputs:
     workItemType: 'Issue'
