--- a/CreateWorkItem.yml
+++ b/CreateWorkItem.yml
@@ -1,11 +1,14 @@
 parameters:
-  library: ''
-  version: ''
+  title: ''
+  overview: ''
+  cve: ''
+  link: ''
+  vulnerabilityTypes: []
 steps:
 - task: CreateWorkItem@1
   inputs:
     workItemType: 'Issue'
-    title: 'Veracode SCA - ${{ parameters.library }}-${{ parameters.version }}'
-    fieldMappings: 'Description=An issue was detected during an SCA run:\nLibrary: ${{ parameters.library }}\nVersion: ${{ parameters.version }}'
+    title: 'Veracode SCA - ${{ parameters.title }}'
+    fieldMappings: 'Overview: ${{ parameters.overview }} - CVE: ${{ parameters.cve }}VulnerabilityTypes: ${{ parameters.vulnerabilityTypes }} - Link: ${{ parameters.link }}'
     associate: true
     associationType: 'foundInBuild'
