--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,8 +21,12 @@ steps:
     SRCCLR_API_TOKEN: $(SCA_TOKEN)
   inputs:
     script: 'curl -sSL  https://download.sourceclear.com/ci.sh | SRCCLR_CI_JSON=1 sh > sca_output.json'
+
+- task: CmdLine@2
+  name: ParseJson
+  inputs:
+    script: '$TEMP_OUTPUT=`jq .records[0].vulnerabilities sca_output.json`'
     
-- script: $TEMP_OUTPUT=`jq .records[0].vulnerabilities sca_output.json`
 - powershell: Write-Host '##vso[task.setvariable variable=vulnerabilities,isOutput=true]$TEMP_OUTPUT'
 - script: echo $(vulnerabilities)
 
