--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -25,11 +25,11 @@ steps:
 - task: CmdLine@2
   name: ParseJson
   inputs:
-    script: 'TEMP_OUTPUT=`jq .records[0].vulnerabilities sca_output.json`'
-
-- script: echo $TEMP_OUTPUT 
-
-- script: echo "##vso[task.setvariable variable=vulnerabilities;isOutput=true]$TEMP_OUTPUT"
+    script: | 
+      TEMP_OUTPUT=`jq .records[0].vulnerabilities sca_output.json`
+      echo $TEMP_OUTPUT
+      echo "##vso[task.setvariable variable=vulnerabilities;isOutput=true]$TEMP_OUTPUT"
+      echo $(vulnerabilities)
 
 - task: CmdLine@2
   name: EchoVulnerabilities
