--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,14 +22,16 @@ steps:
   inputs:
     script: 'curl -sSL  https://download.sourceclear.com/ci.sh | SRCCLR_CI_JSON=1 sh > sca_output.json'
 
+- powershell: echo `jq .records[0].vulnerabilities sca_output.json`
 - task: CmdLine@2
   name: ParseJson
   inputs:
     script: | 
       TEMP_OUTPUT=`jq .records[0].vulnerabilities sca_output.json`
       echo $TEMP_OUTPUT
-      echo "##vso[task.setvariable variable=vulnerabilities;isOutput=true]$TEMP_OUTPUT"
+      Write-Host "##vso[task.setvariable variable=vulnerabilities]$TEMP_OUTPUT"
       echo $(vulnerabilities)
+    
 
 - task: CmdLine@2
   name: EchoVulnerabilities
