echoing Get-Content before

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,8 +24,9 @@ steps:
     script: 'curl -sSL  https://download.sourceclear.com/ci.sh | SRCCLR_CI_JSON=1 sh > sca_output.json'
 
 - powershell: |
-    echo Get-Content 'sca_output.json'
-    $TEMP_OUTPUT = Get-Content 'sca_output.json' | ConvertFrom-Json
+    $SCA_JSON = Get-Content 'sca_output.json'
+    echo $SCA_JSON
+    $TEMP_OUTPUT = $SCA_JSON | ConvertFrom-Json
     Write-Host '##vso[task.setvariable variable=vulnerabilities]$TEMP_OUTPUT'
     echo TEMP: $TEMP_OUTPUT
     echo Vulnerabilities: $(vulnerabilities)
