Entering records on HashTable

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -27,8 +27,12 @@ steps:
     $SCA_JSON = Get-Content 'sca_output.json'
     echo $SCA_JSON
     $TEMP_OUTPUT = $SCA_JSON | ConvertFrom-Json -AsHashtable
-    Write-Host '##vso[task.setvariable variable=vulnerabilities]$TEMP_OUTPUT'
     echo TEMP: $TEMP_OUTPUT
+    $TEMP_OUTPUT = $TEMP_OUTPUT['records']
+    echo Records: $TEMP_OUTPUT
+    $TEMP_OUTPUT = $TEMP_OUTPUT['vulnerabilities']
+    Write-Host "##vso[task.setvariable variable=vulnerabilities]$TEMP_OUTPUT"
+    echo Vulnerabilities on temp: $TEMP_OUTPUT
     echo Vulnerabilities: $(vulnerabilities)
 
 - script: echo $(vulnerabilities)
