--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -27,6 +27,7 @@ steps:
     $SCA_JSON = Get-Content 'sca_output.json'
     echo $SCA_JSON
     $TEMP_OUTPUT = $SCA_JSON | ConvertFrom-Json
+    $TEMP_OUTPUT = $TEMP_OUTPUT | ConvertTo-Json
     echo TEMP: $TEMP_OUTPUT
     $TEMP_OUTPUT = $TEMP_OUTPUT.records
     echo Records: $TEMP_OUTPUT
