Entering fields in a single call

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,8 +26,7 @@ steps:
 - powershell: |
     $SCA_JSON = Get-Content 'sca_output.json'
     $TEMP_OUTPUT = $SCA_JSON | ConvertFrom-Json
-    $TEMP_OUTPUT = $TEMP_OUTPUT.records
-    $TEMP_OUTPUT = $TEMP_OUTPUT.vulnerabilities
+    $TEMP_OUTPUT = $TEMP_OUTPUT.records.vulnerabilities
     $TEMP_OUTPUT = $TEMP_OUTPUT | ConvertTo-Json
     Write-Host "##vso[task.setvariable variable=vulnerabilities]$TEMP_OUTPUT"
     echo Vulnerabilities on temp: $TEMP_OUTPUT
