--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -33,8 +33,8 @@ steps:
           $TEMP_OUTPUT = $TEMP_OUTPUT.records.vulnerabilities
           $TEMP_OUTPUT = $TEMP_OUTPUT | ConvertTo-Json -Depth 10
           echo Vulnerabilities on temp: $TEMP_OUTPUT
-          Write-Host "##vso[task.setvariable variable=Vulnerabilities]$TEMP_OUTPUT"
+          Write-Host "##vso[task.setvariable variable=Vulnerabilities;isOutput=true]$TEMP_OUTPUT"
 
 - task: CmdLine@2
   inputs:
-    script: 'echo Vulnerabilties outside: $Vulnerabilities'
+    script: 'echo Vulnerabilties outside: $[Vulnerabilities]'
