--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -32,9 +32,9 @@ steps:
           $SCA_JSON = Get-Content 'sca_output.json'
           $TEMP_OUTPUT = $SCA_JSON | ConvertFrom-Json
           $TEMP_OUTPUT = $TEMP_OUTPUT.records.vulnerabilities
-
+          $TEMP_OUTPUT = $TEMP_OUTPUT | ConvertTo-Json -Depth 10 -Compress
           Write-Host "##vso[task.setvariable variable=Vulnerabilities;isOutput=true]$TEMP_OUTPUT"
 
 - template : CreateWorkItems.yml
   parameters:
-    vulnerabilities: $(SaveToVulnerabilities.Vulnerabilities)
+    vulnerabilities: $[SaveToVulnerabilities.Vulnerabilities]
