Using powershell foreach

--- a/CreateWorkItems.yml
+++ b/CreateWorkItems.yml
@@ -14,11 +14,18 @@ steps:
           $TEMP_OUTPUT = $TEMP_OUTPUT | ConvertTo-Json -Depth 10 -Compress
           Write-Host "##vso[task.setvariable variable=Vulnerabilities;isOutput=true]$TEMP_OUTPUT"
 
-- $[ each vulnerability in ReadJsonOutput.Vulnerabilities ]:
-  - template : CreateWorkItem.yml
-    parameters:
-      title: ${{ vulnerability.title }}
-      overview: ${{ vulnerability.overview }}
-      cve: ${{ vulnerability.cve }}
-      link: ${{ vulnerability.link }}
-      vulnerabilityTypes: ${{ vulnerability.vulnerabilityTypes }}
+- task: PowerShell@2
+  displayName: 'Fetching ValueFiles'
+  inputs:
+    targetType: 'inline'
+    script: >
+      foreach ($vulnerability in $(ReadJsonOutput.Vulnerabilities))
+      {
+        Write-Host "- task: CreateWorkItem@1
+  inputs:
+    workItemType: 'Issue'
+    title: 'Veracode SCA - ${{ parameters.title }}'
+    fieldMappings: 'Description=<ul><li>Overview: $(vulnerability.overview)</li><li>CVE: $(vulnerability.cve)</li><li>Link: $(vulnerability.link)</li></ul>'
+    associate: true
+    associationType: 'foundInBuild'"
+      }
